--- a/example/conf/app.conf
+++ b/example/conf/app.conf
@@ -7,7 +7,10 @@ runmode = dev
 social_auth_url = http://127.0.0.1:8092/
 
 ; your client_id and secret
-github_client_id =
-github_client_secret =
-google_client_id =
-google_client_secret =
+
+github_client_id = 887d3e93cec7548963dd
+github_client_secret = 216db028492fb55c318f6a573d9a21a73f612595
+
+google_client_id = 619903534134-bvsdorpte9hu4incraj3f1eah928gg56.apps.googleusercontent.com
+google_client_secret = Pndoqu6-cNDuH31zHr3Xcoan
+
