Add for other platform settings
Add for other platform settings.

--- a/example/conf/app.conf
+++ b/example/conf/app.conf
@@ -13,3 +13,11 @@ github_client_id =
 github_client_secret =
 google_client_id =
 google_client_secret =
+weibo_client_id =
+weibo_client_secret =
+qq_client_id =
+qq_client_secret =
+dropbox_client_id =
+dropbox_client_secret =
+facebook_client_id =
+facebook_client_secret =
